upp-neo4j-provisioner/cloudformation/up-neo4j-ha-cluster-subnets.yaml
---
AWSTemplateFormatVersion: 2010-09-09
Description: >
  Template to create 3 private and 3 public subnets. Each public subnet will have NAT Gateway that provides internet access for private subnets.
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
    - Label:
        default: Network Configuration
      Parameters:
      - VPC
      - AvailabilityZone1
      - AvailabilityZone2
      - AvailabilityZone3
      - PublicSubnet1Cidr
      - PublicSubnet2Cidr
      - PublicSubnet3Cidr
      - PrivateSubnet1Cidr
      - PrivateSubnet2Cidr
      - PrivateSubnet3Cidr
      - PublicSubnetRouteTableId
Parameters:
  VPC:
    Description: This is VPC where Sematic cluster lives today (26.1.2017)
    Type: AWS::EC2::VPC::Id
    Default: vpc-9fcb94fb
  PublicSubnetRouteTableId:
    Description: RouteTableId associated with VPC. If updating VPC ID remember to update also this value. 
    Type: String
    Default: rtb-6d739b0a
  AvailabilityZone1:
    Description: Availability zone 1
    Type: AWS::EC2::AvailabilityZone::Name
    Default: eu-west-1a
  AvailabilityZone2:
    Description: Availability zone 2
    Type: AWS::EC2::AvailabilityZone::Name
    Default: eu-west-1b
  AvailabilityZone3:
    Description: Availability zone 3
    Type: AWS::EC2::AvailabilityZone::Name
    Default: eu-west-1c
  PublicSubnet1Cidr:
    Description: CIDR for Public subnet 1
    Type: String
    Default: 172.24.240.0/24
  PublicSubnet2Cidr:
    Description: CIDR for Public subnet 2
    Type: String
    Default: 172.24.241.16/24
  PublicSubnet3Cidr:
    Description: CIDR for Public subnet 3
    Type: String
    Default: 172.24.242.32/24
  PrivateSubnet1Cidr:
    Description: CIDR for Private subnet 1
    Type: String
    Default: 172.24.250.0/24
  PrivateSubnet2Cidr:
    Description: CIDR for Private subnet 2
    Type: String
    Default: 172.24.251.0/24
  PrivateSubnet3Cidr:
    Description: CIDR for Private subnet 3
    Type: String
    Default: 172.24.252.0/24
  TagEnvironment:
    Description: Tag detail for the Environment
    Type: String
    Default: p
  TagTeamDL:
    Description: Tag of the TeamDL.
    Type: String
    ConstraintDescription: There must be a valid email address for the TeamDL
    AllowedPattern: ^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$
    Default: universal.publishing.platform@ft.com
  TagSystemCode:
    Description: Tag detail for the SystemCode
    Type: String
    Default: upp
  TagIpCode:
    Description: Tag detail for the ipCode
    Type: String
    Default: P196
  TagDescription:
    Description: Tag detail for the describing the instance.
    Type: String
    Default: Subnets for Neo4j HA Cluster
Resources:
  # Public subnets
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock:
        Ref: PublicSubnet1Cidr
      AvailabilityZone:
        Ref: AvailabilityZone1
      MapPublicIpOnLaunch: true
      Tags:
      - Key: Name
        Value: Neo4j HA Public Subnet 1
      - Key: environment
        Value: !Ref TagEnvironment
      - Key: teamDL
        Value: !Ref TagTeamDL
      - Key: systemCode
        Value: !Ref TagSystemCode
      - Key: ipCode
        Value: !Ref TagIpCode
      - Key: description
        Value: !Ref TagDescription
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock:
        Ref: PublicSubnet2Cidr
      AvailabilityZone:
        Ref: AvailabilityZone2
      MapPublicIpOnLaunch: true
      Tags:
      - Key: Name
        Value: Neo4j HA Public Subnet 2
      - Key: environment
        Value: !Ref TagEnvironment
      - Key: teamDL
        Value: !Ref TagTeamDL
      - Key: systemCode
        Value: !Ref TagSystemCode
      - Key: ipCode
        Value: !Ref TagIpCode
      - Key: description
        Value: !Ref TagDescription
  PublicSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock:
        Ref: PublicSubnet3Cidr
      AvailabilityZone:
        Ref: AvailabilityZone3
      MapPublicIpOnLaunch: true
      Tags:
      - Key: Name
        Value: Neo4j HA Public Subnet 3
      - Key: environment
        Value: !Ref TagEnvironment
      - Key: teamDL
        Value: !Ref TagTeamDL
      - Key: systemCode
        Value: !Ref TagSystemCode
      - Key: ipCode
        Value: !Ref TagIpCode
      - Key: description
        Value: !Ref TagDescription
  # Private subnets
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock:
        Ref: PrivateSubnet1Cidr
      AvailabilityZone:
        Ref: AvailabilityZone1
      Tags:
      - Key: Name
        Value: Neo4j HA Private Subnet 1
      - Key: environment
        Value: !Ref TagEnvironment
      - Key: teamDL
        Value: !Ref TagTeamDL
      - Key: systemCode
        Value: !Ref TagSystemCode
      - Key: ipCode
        Value: !Ref TagIpCode
      - Key: description
        Value: !Ref TagDescription
  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock:
        Ref: PrivateSubnet2Cidr
      AvailabilityZone:
        Ref: AvailabilityZone2
      Tags:
      - Key: Name
        Value: Neo4j HA Private Subnet 2
      - Key: environment
        Value: !Ref TagEnvironment
      - Key: teamDL
        Value: !Ref TagTeamDL
      - Key: systemCode
        Value: !Ref TagSystemCode
      - Key: ipCode
        Value: !Ref TagIpCode
      - Key: description
        Value: !Ref TagDescription
  PrivateSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock:
        Ref: PrivateSubnet3Cidr
      AvailabilityZone:
        Ref: AvailabilityZone3
      Tags:
      - Key: Name
        Value: Neo4j HA Private Subnet 3
      - Key: environment
        Value: !Ref TagEnvironment
      - Key: teamDL
        Value: !Ref TagTeamDL
      - Key: systemCode
        Value: !Ref TagSystemCode
      - Key: ipCode
        Value: !Ref TagIpCode
      - Key: description
        Value: !Ref TagDescription
  # Public subnet route table association
  PublicSubnet1Route:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PublicSubnetRouteTableId
      SubnetId:
        Ref: PublicSubnet1
  PublicSubnet2Route:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PublicSubnetRouteTableId
      SubnetId:
        Ref: PublicSubnet2
  PublicSubnet3Route:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PublicSubnetRouteTableId
      SubnetId:
        Ref: PublicSubnet3
  # Route Tables for private subnets
  PrivateSubnet1RouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: Neo4j HA Private Subnet 1 RouteTable
      - Key: environment
        Value: !Ref TagEnvironment
      - Key: teamDL
        Value: !Ref TagTeamDL
      - Key: systemCode
        Value: !Ref TagSystemCode
      - Key: ipCode
        Value: !Ref TagIpCode
      - Key: description
        Value: !Ref TagDescription
  PrivateSubnet2RouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: Neo4j HA Private Subnet 2 RouteTable
      - Key: environment
        Value: !Ref TagEnvironment
      - Key: teamDL
        Value: !Ref TagTeamDL
      - Key: systemCode
        Value: !Ref TagSystemCode
      - Key: ipCode
        Value: !Ref TagIpCode
      - Key: description
        Value: !Ref TagDescription
  PrivateSubnet3RouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: Neo4j HA Private Subnet 3 RouteTable
      - Key: environment
        Value: !Ref TagEnvironment
      - Key: teamDL
        Value: !Ref TagTeamDL
      - Key: systemCode
        Value: !Ref TagSystemCode
      - Key: ipCode
        Value: !Ref TagIpCode
      - Key: description
        Value: !Ref TagDescription
  # Route table association with Private subneta
  PrivateSubnet1RouteAssociate:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId:
        Ref: PrivateSubnet1RouteTable
      SubnetId:
        Ref: PrivateSubnet1
  PrivateSubnet2RouteAssociate:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId:
        Ref: PrivateSubnet2RouteTable
      SubnetId:
        Ref: PrivateSubnet2
  PrivateSubnet3RouteAssociate:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId:
        Ref: PrivateSubnet3RouteTable
      SubnetId:
        Ref: PrivateSubnet3
  # Private subnet routes via NAT Gateway
  PrivateSubnet1RouteViaNATGW:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: NatGW1
      RouteTableId:
        Ref: PrivateSubnet1RouteTable
  PrivateSubnet2RouteViaNATGW:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: NatGW2
      RouteTableId:
        Ref: PrivateSubnet2RouteTable
  PrivateSubnet3RouteViaNATGW:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: NatGW3
      RouteTableId:
        Ref: PrivateSubnet3RouteTable
  # NAT Gateways with ElasticIPs for Public subnets
  ElasticIP1:
    Type: AWS::EC2::EIP
    Properties:
      Domain:
        Ref: VPC
  ElasticIP2:
    Type: AWS::EC2::EIP
    Properties:
      Domain:
        Ref: VPC
  ElasticIP3:
    Type: AWS::EC2::EIP
    Properties:
      Domain:
        Ref: VPC
  NatGW1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt ElasticIP1.AllocationId
      SubnetId:
        Ref: PublicSubnet1
  NatGW2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt ElasticIP2.AllocationId
      SubnetId:
        Ref: PublicSubnet2
  NatGW3:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt ElasticIP3.AllocationId
      SubnetId:
        Ref: PublicSubnet3
